--- a/views/pages/exercise2.ejs
+++ b/views/pages/exercise2.ejs
@@ -18,11 +18,137 @@
   <div class="row">
     <div class="border">
       <h3><span class="glyphicon glyphicon-registration-mark"></span>Fibonacci functions</h3>
-      <p> Fibonacci returns: </p>
+      <form>
+        Max Fib number: <input type="number" id="fibNumFun" required min="1"><br>
+        <button onClick="document.write(fibonacciNumFunction(document.getElementById('fibNumFun').value))">Fibonacci classic</button>
+        <button onClick="document.write(fibonacciRecursive(document.getElementById('fibNumFun').value))">Fibonacci Recursive</button>
+      </form>
     </div>
   </div> <!-- row -->
-</div>
+
+  <hr>
+
+  <div class="row">
+    <div class="border">
+      <h3><span class="glyphicon glyphicon-registration-mark"></span>Form with student name</h3>
+      <form>
+        Student name: <input type="text" id="name" required><br>
+        <button onClick="displayName()">Show name on screen</button>
+      </form>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="border">
+      <h3><span class="glyphicon glyphicon-registration-mark"></span>Display student age from array</h3>
+      <form>
+        Student age: <input type="number" id="age" required min="1"><br>
+        <button onClick="findStudentByAge(document.getElementById('age').value)">Show name on screen</button>
+      </form>
+    </div>
+  </div>
+</div> <!-- container -->
 
 
 </body>
+
+<script>
+// FIBONACCI
+console.log("Fibonacci sequence recursive: "+fibonacciRecursive(12))
+console.log("Fibonacci sequence method: "+fibonacciNumFunction(12))
+
+function fibonacciRecursive(n) {
+    if(n == 1) {
+        return [0,1]
+    }
+    else if (n < 0) {
+        return "Please enter number bigger than 0"
+    }
+    else {
+        var fibSequence = fibonacciRecursive(n-1)
+        fibSequence.push(fibSequence[fibSequence.length -1] + fibSequence[fibSequence.length -2])
+        return fibSequence
+    }
+};
+
+function fibonacciNumFunction(n) {
+    var fibSequence = [0,]
+    if(n >= 1) {
+        x = 0
+        y = 1
+        while (n >= 1) {
+            tmp = x
+            x = x + y
+            y = tmp
+            fibSequence.push(x)
+            n--
+        }
+        return fibSequence
+    }
+    else if (n < 0) {
+        return "Please enter number bigger than 0"
+    }
+    else {
+        return fibSequence
+    }
+};
+</script>
+
+<script>
+// PEOPLE STRUCTURES
+var student = {
+    name: "Dave",
+    age: 24,
+    city: "Gjovik"
+}
+
+var students = [{
+                    name: "Dave",
+                    age: 24,
+                    city: "Gjovik"
+                },
+                {
+                    name: "Marek",
+                    age: 31,
+                    city: "Brno"
+                },
+                {
+                    name: "Luke",
+                    age: 19,
+                    city: "Prague"
+                }
+                ]
+
+function makeStudentOlder(years) {
+    return student.age + years;
+}
+
+console.log("Student is "+makeStudentOlder(6)+" years old.")
+
+function displayName() {
+    if(document.getElementById('name').value == "")
+        alert("You have not entered any name.")
+    else
+        alert(document.getElementById('name').value)
+}
+
+function findStudentByAge(age) {
+    if (age <= 0) {
+        alert("Please enter age higher than 0.")
+        return
+    }
+
+    found = false
+    for(i=0; i < students.length; i++)
+        if (students[i].age == age) {
+            alert("Name: "+students[i].name+"\nAge: "+students[i].age+"\nCity: "+students[i].city)
+            found = true
+        }
+        else if (i == students.length - 1 && !found)
+            alert("No student with this age.")
+}
+</script>
+
 </html>
