--- a/views/pages/exercise2.ejs
+++ b/views/pages/exercise2.ejs
@@ -79,7 +79,7 @@ function fibonacciRecursive(n) {
     if(n == 1) {
         return [0,1]
     }
-    else if (n < 0) {
+    else if (n <= 0) {
         return "Please enter number bigger than 0"
     }
     else {
@@ -104,7 +104,7 @@ function fibonacciNumFunction(n) {
         document.getElementById('fibResult').innerHTML = "Result: "+fibSequence
 //         return fibSequence
     }
-    else if (n < 0) {
+    else if (n <= 0) {
         document.getElementById('fibResult').innerHTML = "Result: Please enter number bigger than 0"
 //         return "Please enter number bigger than 0"
     }
