--- a/views/pages/assignment01.ejs
+++ b/views/pages/assignment01.ejs
@@ -158,32 +158,7 @@
 </script>
 
 <script>
-    // AJAX Create a user account
-    function createUserAccount() {
-        const fname = document.getElementById("firstName").value
-        const lname = document.getElementById("lastName").value
-        const dateOfBirth = document.getElementById("dateOfBirth").value
-        const city = document.getElementById("city").value
-        var request = new XMLHttpRequest()
-        if (document.getElementById('firstName').value == "" || document.getElementById('lastName').value == "" || document.getElementById('dateOfBirth').value == "" || document.getElementById('city').value == "")
-            alert("Please fill in all required fields.")
-        else {
-            request.open("POST", `createUserAccount/${fname}/${lname}/${dateOfBirth}/${city}`, true)
-            request.setRequestHeader("Content-Type", "text/plain")
-            console.log(request)
-            request.onload = function () {
-                if (this.readyState === 4 && this.status === 200) {
-                    document.getElementById("accountCreateResponse").innerHTML = this.responseText;
-                    //alert(this.responseText+" "+document.getElementById("nameAjax").value);
-                }
-                else {
-                    console.log(request.statusText + ",\n" + request.responseText)
-                    document.getElementById("accountCreateResponse").innerHTML = "An error occured while calling the resource. See console for more info.";
-                }
-            }
-            request.send()
-        }
-    }
+    import {createUserAccount} from '../index.js'
 </script>
 
 </html>
