--- a/views/pages/assignment01.ejs
+++ b/views/pages/assignment01.ejs
@@ -15,171 +15,150 @@
 
   <main>
     <div class="_container">
-      <div class="row">
-
-        <form>
-          <h3>Form with student name</h3>
-          <label for="name"> Student name: </label>
-          <input type="text" id="name" name="name" required><br>
-          <button type="button" onClick="displayName()">Show name on screen</button>
-        </form>
-      </div>
 
       <div class="row">
         <form>
-          <h3>Display student by age</h3>
-          <label for="age"> Student age: </label>
-          <input type="number" name="age" id="age" required min="1"><br>
-          <button type="button" onClick="findStudentByAge(document.getElementById('age').value)">Show student
-            by age</button>
-        </form>
-      </div>
-
-      <div class="row">
-        <form>
-          <h3>Add a user account</h3>
+          <h3>Add/search for a user account</h3>
           <label>First name:</label>
-          <input type="text" id="firstName" required><br>
+          <input type="text" id="fname" required><br>
           <label>Last name:</label>
-          <input type="text" id="lastName" required><br>
+          <input type="text" id="lname" required><br>
           <label>Date of birth:</label>
           <input type="date" placeholder="1970-01-01" id="dateOfBirth" required><br>
           <label>City: </label>
           <input type="text" id="city" required><br>
           <button type="button" onClick="createUserAccount()">Create an account</button>
           <p id="accountCreateResponse"><b>Please mind your inputs.</b></p>
+          <br>
+          <button type="button" onClick="displayAccountNumber()">Show me account number</button>
+          <p id="searchAccountResponse"><b>Client's account number you looked for is: </b></p>
         </form>
       </div>
+
+      <div class="row">
+        <form>
+          <h3>Delete customer from DB</h3>
+          <label>Personal number: </label>
+          <input type="text" name="Personal number" id="person_num" required><br>
+          <button type="button" onClick="deleteClientFromDB()">Delete client's account</button>
+          <p id="deleteAccountResponse"></p>
+        </form>
+      </div>
+
+      <div class="row">
+        <form>
+          <h3>Update customer in DB</h3>
+          <label>Personal number: </label>
+          <input type="text" name="Personal number" id="person_num_update" required><br>
+          <label>Updated last name: </label>
+          <input type="text" name="Last Name to update" id="lname_update" required>
+          <button type="button" onClick="updateClientsLastName()">Update client's name</button>
+          <p id="updateAccountResponse"></p>
+        </form>
+      </div>
+
+      <div class="row" style="word-wrap:break-word">
+        <form>
+          <h4>If you'd like to see all personal numbers, call <i>/allPersonNums</i> interface (don't use in production pls).</h4>
+        </form>
+      </div>
+
     </div>
   </main> <!-- container -->
 </body>
 
 <script>
-  // FIBONACCI
-  // console.log("Fibonacci sequence recursive: "+fibonacciRecursive(12))
-  // console.log("Fibonacci sequence method: "+fibonacciNumFunction(12))
-
-  function FibRecRes(n) {
-    document.getElementById('fibResult').innerHTML = "Result: " + fibonacciRecursive(n)
-  }
-
-  function fibonacciRecursive(n) {
-    if (n == 1) {
-      return [0, 1]
-    }
-    else if (n <= 0) {
-      return "Please enter number bigger than 0"
-    }
-    else {
-      var fibSequence = fibonacciRecursive(n - 1)
-      fibSequence.push(fibSequence[fibSequence.length - 1] + fibSequence[fibSequence.length - 2])
-      return fibSequence
-    }
-  };
-
-  function fibonacciNumFunction(n) {
-    var fibSequence = [0,]
-    if (n >= 1) {
-      x = 0
-      y = 1
-      while (n >= 1) {
-        tmp = x
-        x = x + y
-        y = tmp
-        fibSequence.push(x)
-        n--
-      }
-      document.getElementById('fibResult').innerHTML = "Result: " + fibSequence
-      //         return fibSequence
-    }
-    else if (n <= 0) {
-      document.getElementById('fibResult').innerHTML = "Result: Please enter number bigger than 0"
-      //         return "Please enter number bigger than 0"
-    }
-    else {
-      document.getElementById('fibResult').innerHTML = "Result: " + fibSequence
-      //         return fibSequence
-    }
-  };
-</script>
-
-<script>
-  // PEOPLE STRUCTURES
-  var student = {
-    name: "Dave",
-    age: 24,
-    city: "Gjovik"
-  }
-
-  var students = [{
-    name: "Dave",
-    age: 24,
-    city: "Gjovik"
-  },
-  {
-    name: "Marek",
-    age: 31,
-    city: "Brno"
-  },
-  {
-    name: "Luke",
-    age: 19,
-    city: "Prague"
-  }
-  ]
-
-  function makeStudentOlder(years) {
-    return student.age + years;
-  }
-
-  console.log("Student is " + makeStudentOlder(6) + " years old.")
-
-  function displayName() {
-    if (document.getElementById('name').value == "")
-      alert("You have not entered any name.")
-    else
-      alert(document.getElementById('name').value)
-  }
-
-  function findStudentByAge(age) {
-    if (age <= 0) {
-      alert("Please enter age higher than 0.")
-      return
-    }
-
-    found = false
-    for (i = 0; i < students.length; i++)
-      if (students[i].age == age) {
-        alert("Name: " + students[i].name + "\nAge: " + students[i].age + "\nCity: " + students[i].city)
-        found = true
-      }
-      else if (i == students.length - 1 && !found)
-        alert("No student with this age.")
-  }
-</script>
-
-<script>
   // AJAX Create a user account
   function createUserAccount() {
-    const fname = document.getElementById("firstName").value
-    const lname = document.getElementById("lastName").value
+    const fname = document.getElementById("fname").value
+    const lname = document.getElementById("lname").value
     const dateOfBirth = document.getElementById("dateOfBirth").value
     const city = document.getElementById("city").value
     var request = new XMLHttpRequest()
-    if (document.getElementById('firstName').value == "" || document.getElementById('lastName').value == "" || document.getElementById('dateOfBirth').value == "" || document.getElementById('city').value == "")
+    if (document.getElementById('fname').value == "" || document.getElementById('lname').value == "" || document.getElementById('dateOfBirth').value == "" || document.getElementById('city').value == "")
       alert("Please fill in all required fields.")
     else {
       request.open("POST", `createUserAccount/${fname}/${lname}/${dateOfBirth}/${city}`, true)
       request.setRequestHeader("Content-Type", "text/plain")
-      console.log(request)
+      // console.log(request)
       request.onload = function () {
         if (this.readyState === 4 && this.status === 200) {
           document.getElementById("accountCreateResponse").innerHTML = this.responseText;
-          //alert(this.responseText+" "+document.getElementById("nameAjax").value);
         }
         else {
           console.log(request.statusText + ",\n" + request.responseText)
           document.getElementById("accountCreateResponse").innerHTML = "An error occured while calling the resource. See console for more info.";
+        }
+      }
+      request.send()
+    }
+  }
+
+  // AJAX Search for user's account number
+  function displayAccountNumber() {
+    const fname = document.getElementById("fname").value
+    const lname = document.getElementById("lname").value
+    const dateOfBirth = document.getElementById("dateOfBirth").value
+    const city = document.getElementById("city").value
+    var request = new XMLHttpRequest()
+    if (document.getElementById('fname').value == "" || document.getElementById('lname').value == "" || document.getElementById('dateOfBirth').value == "" || document.getElementById('city').value == "")
+      alert("Please fill in all required fields.")
+    else {
+      request.open("GET", `getAccount/${fname}/${lname}/${dateOfBirth}/${city}`, true)
+      request.setRequestHeader("Content-Type", "text/plain")
+      // console.log(request)
+      request.onload = function () {
+        if (this.readyState === 4 && this.status === 200) {
+          document.getElementById("searchAccountResponse").innerHTML = this.responseText;
+        }
+        else {
+          console.log(request.statusText + ",\n" + request.responseText)
+          document.getElementById("searchAccountResponse").innerHTML = "An error occured while calling the resource. See console for more info.";
+        }
+      }
+      request.send()
+    }
+  }
+
+  // AJAX Search for user's account number
+  function deleteClientFromDB() {
+    const person_num = document.getElementById("person_num").value
+    var request = new XMLHttpRequest()
+    if (document.getElementById('person_num').value == "")
+      alert("Please fill in required field.")
+    else {
+      request.open("DELETE", `/deleteAccountById/${person_num}`, true)
+      // console.log(request)
+      request.onload = function () {
+        if (this.readyState === 4 && this.status === 200) {
+          document.getElementById("deleteAccountResponse").innerHTML = request.responseText;
+        }
+        else {
+          console.log(request.statusText + ",\n" + request.responseText)
+          document.getElementById("deleteAccountResponse").innerHTML = "An error occured while calling the resource. See console for more info.";
+        }
+      }
+      request.send()
+    }
+  }
+
+  function updateClientsLastName() {
+    const person_num_update = document.getElementById("person_num_update").value
+    const lname_update = document.getElementById("lname_update").value
+    var request = new XMLHttpRequest()
+    if (document.getElementById('person_num_update').value == "" || document.getElementById('lname_update').value == "")
+      alert("Please fill in all required fields.")
+    else {
+      request.open("PUT", `updateAccount/${person_num_update}/${lname_update}`, true)
+      request.setRequestHeader("Content-Type", "text/plain")
+      // console.log(request)
+      request.onload = function () {
+        if (this.readyState === 4 && this.status === 200) {
+          document.getElementById("updateAccountResponse").innerHTML = this.responseText;
+        }
+        else {
+          console.log(request.statusText + ",\n" + request.responseText)
+          document.getElementById("updateAccountResponse").innerHTML = "An error occured while calling the resource. See console for more info.";
         }
       }
       request.send()
