--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Getting Started on Heroku with Ruby</a></li>
+            <li><a href="https://cloudtechunknown.herokuapp.com/assignment1">Getting Started on Heroku with Ruby</a></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started on Heroku with Node.js</a></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-php">Getting Started on Heroku with PHP</a></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started on Heroku with Python</a></li>
@@ -21,6 +21,15 @@
             <li class="divider"></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-heroku-and-connect-without-local-dev">Getting Started on Heroku with Heroku Connect</a></li>
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started on Heroku with Ruby (Microsoft Windows)</a></li>
+          </ul>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Assignments <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="https://cloudtechunknown.herokuapp.com/assignment1">Assignment 1 (ABC Bank)</a></li>
+            <li><a href="https://cloudtechunknown.herokuapp.com/exercise2">Exercise 2</a></li>
+            <li><a href="https://cloudtechunknown.herokuapp.com/exercise3">Exercise 3</a></li>
+            <li><a href="https://cloudtechunknown.herokuapp.com/exercise3">Exercise 4</a></li>
           </ul>
       </li>
     </ul>
