--- a/public/stylesheets/exercises.css
+++ b/public/stylesheets/exercises.css
@@ -55,6 +55,21 @@ main {
   color: black;
   margin-bottom: 1em;
 }
+.form .response{
+  background-color: rgba(50,50,50,0.2);
+  padding:.5em;
+  color: #dcfffd;
+  border-radius: .5em;
+}
+.form .latency{
+  background-color: rgba(50,50,50,0.1);
+  padding: .5em;
+  color: #ffd2d2;
+  border-radius: .5em;
+  margin: .3em;
+  width: 80%;
+  margin:auto;
+}
 button {
   background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   background-color: #667eea;
